Update azure-pipelines-3.yml for Azure Pipelines

--- a/azure-pipelines-3.yml
+++ b/azure-pipelines-3.yml
@@ -1,10 +1,14 @@
 name: sampledemo_$(Date:yyyyMMdd)$(Rev:r)
-trigger: 
+trigger:
   - Main
 pool:
   name: Default
 steps:
-- task: MSBuild@1
-  inputs:
-    solution: '**/*.sln'
-    msbuildArguments: '/p:DeployOnBuild=true /p:WebPublishMethod=Package   /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:PackageLocation="$(build.artifactstagingdirectory)\\"'
+  - task: UseDotNet@2
+    inputs:
+      version: '3.x'
+
+  - task: MSBuild@1
+    inputs:
+      solution: '**/*.sln'
+      msbuildArguments: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:PackageLocation="$(build.artifactstagingdirectory)\\"
