--- a/azure-pipelines-3.yml
+++ b/azure-pipelines-3.yml
@@ -11,4 +11,4 @@ steps:
   - task: MSBuild@1
     inputs:
       solution: '**/*.sln'
-      msbuildArguments: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:PackageLocation="$(build.artifactstagingdirectory)\\"
+      msbuildArguments: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:PackageLocation="$(build.artifactstagingdirectory)\\"'
