--- a/azure-pipelines-3.yml
+++ b/azure-pipelines-3.yml
@@ -2,7 +2,7 @@ name: sampledemo_$(Date:yyyyMMdd)$(Rev:r)
 trigger:
   - Main
 pool:
-  name: custom_agent
+  name: Default
 
 steps:
   - task: UseDotNet@2
